# machine-learning-music-genre-classifier

./: .gitattributes  .gitignore  README.md  capstone.ipynb  capstone_classification.ipynb  capstone_data_analysis.ipynb  capstone_data_cleaning.ipynb  capstone_dimension_reduction.ipynb  intersection_reduced.csv  lda_reduced.csv  lda_training.csv  pca_reduced.csv  processed_dataset.csv  pyproject.toml  report.md
classifications/: capstone_classification_intersection_ds.ipynb  capstone_classification_lda_ds.ipynb  capstone_classification_pca_ds.ipynb
classifications/reducedDataSets/: lda_x_testing.csv  lda_y_testing.csv
dataSet/: musicData.csv
