[tool.poetry]
name = "ml-capstone"
version = "0.1.0"
description = "virtual environment for machine learning capstone"
authors = ["Yan <100032599+whykay-01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
autograd = "^1.6.2"
ipympl = "^0.9.3"
tqdm = "^4.66.2"
tabulate = "^0.9.0"
torch = "^2.2.0"
geopandas = "^0.14.3"
geopy = "^2.4.1"
statsmodels = "^0.14.1"
torchvision = "^0.17.1"
umap-learn = "^0.5.5"
gym = "^0.26.2"
pygame = "^2.5.2"
ffmpeg = "^1.4"
plotly = "^5.22.0"
sklearn-som = "^1.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
